--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.18.2",
     "jest": "^29.7.0",
     "mysql2": "^3.6.1",
+    "nanoid": "^3.3.4",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.33.0",
     "supertest": "^6.3.3",
