--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "target": "es2016",
+    "target": "es2017",
     "module": "commonjs",
+    "removeComments": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
@@ -14,5 +15,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
-  "typeRoots": ["./src/global.d.ts", "./node_modules/@types"]
+  "typeRoots": [
+    "./src/types/global.d.ts",
+    "./src/types/nanoid.d.ts",
+    "./node_modules/@types"
+  ]
 }
