--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@sequelize/core": "^7.0.0-alpha.31",
+    "@types/jest": "^29.5.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jest": "^29.7.0",
