--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jest": "^29.7.0",
     "mysql2": "^3.6.1",
     "nanoid": "^3.3.4",
+    "node-mocks-http": "^1.13.0",
     "reflect-metadata": "^0.1.13",
     "sequelize": "^6.33.0",
     "supertest": "^6.3.3",
