--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "dev": "nodemon dist/index.js",
     "build": "tsc",
     "build:watch": "tsc --watch",
-    "test": "jest"
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "test": "jest",
+    "test:e2e": "npm run docker:up && dotenv -e ./src/test/.env.test jest '.+\\.e2e\\.spec\\.ts'"
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +32,7 @@
   "devDependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.2",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.49.0",
