--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start:container": "docker-compose -f docker.app.yml up -d",
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
     "build": "tsc",
