--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/jest": "^29.5.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "ioredis": "^5.3.2",
     "jest": "^29.7.0",
     "mysql2": "^3.6.1",
     "nanoid": "^3.3.4",
