--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,11 @@ services:
       MYSQL_USER: 'test'
       MYSQL_PASSWORD: 'test_pass'
       MYSQL_ROOT_PASSWORD: 'root'
+  redis:
+    image: "redis:alpine"
+    restart: always
+    ports:
+      - '6380:6379'
   check-db-started: 
     image: jwilder/dockerize:0.6.1
     depends_on:
