--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
     "test": "jest",
-    "test:e2e": "npm run docker:up &&  jest --config ./src/test/jest-e2e.json"
+    "test:e2e": "npm run docker:up &&  jest --config ./src/test/jest-e2e.json && npm run docker:down"
   },
   "author": "",
   "license": "ISC",
